--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <span class="header__description_seletor">Saiba mais</span>
         </p>
         <img
-          src="./images/escalador1.png"
+          src="./images/on_the_edge.png"
           alt="Ilustração 'Dentro da biblioteca'"
           class="header__image"
         />
@@ -52,6 +52,7 @@
       <main class="content">
         <section class="description">
           <p class="description__title">O maior problema da educação</p>
+
           <h1 class="description__content">
             <strong
               >Seja na escola ou na universidade, o assunto que ninguém vai te
@@ -181,14 +182,13 @@
           </h1>
         </section>
         <section class="feynman">
-          <h1 class="feynman__title">A Técnica de Feynman</h1>
           <img
             src="./images/feynman.png"
             alt="Ilustração 'Dentro da biblioteca'"
             class="feynman__content_image"
           />
           <div class="feynman__content">
-            <!-- <div class="feynman__content_circulo"></div> -->
+            <h1 class="feynman__title">A Técnica de Feynman</h1>
             <h2 class="feynman__content_title">Aprender sem esquecer</h2>
             <p class="feynman__content_seletor">Mais</p>
           </div>
