--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               <h1 class="khan__quote-author-subline">Diretor</h1>
             </div>
             <div class="khan__book-container">
-              <img class="book-pic" src="/images/khan-book-2.png" />
+              <img class="book-pic" src="./images/khan-book-2.png" />
               <span class="book-link">Comprar</span>
             </div>
           </div>
