--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <img
             class="nav__logo"
             src="./images/tripleten_preto.png"
-            alt="logomarca"
+            alt="Tripleten fundo preto"
           />
         </nav>
         <h1 class="header__title">Aprendendo a<br />Aprender</h1>
@@ -83,7 +83,7 @@
               <img
                 class="cards__image"
                 src="./images/cards-attention.png"
-                alt="Imagem do Card"
+                alt="Attention"
               />
               <h1 class="cards__title">As Duas Maneiras de Pensar</h1>
               <h2 class="cards__description">
@@ -95,7 +95,7 @@
               <img
                 class="cards__image"
                 src="./images/cards-recall.png"
-                alt="Imagem do Card"
+                alt="Recall"
               />
               <h1 class="cards__title">Recordar</h1>
               <h2 class="cards__description">
@@ -107,7 +107,7 @@
               <img
                 class="cards__image"
                 src="./images/cards-interleaving.png"
-                alt="Imagem do Card"
+                alt="Interleaving"
               />
               <h1 class="cards__title">Intercalar</h1>
               <h2 class="cards__description">
@@ -119,7 +119,7 @@
               <img
                 class="cards__image"
                 src="./images/cards-question.png"
-                alt="Imagem do Card"
+                alt="Question"
               />
               <h1 class="cards__title">Questões</h1>
               <h2 class="cards__description">
@@ -131,7 +131,7 @@
               <img
                 class="cards__image"
                 src="./images/cards-competence.png"
-                alt="Imagem do Card"
+                alt="Competence"
               />
               <h1 class="cards__title">Ilusão da Competência</h1>
               <h2 class="cards__description">
@@ -184,7 +184,7 @@
         <section class="feynman">
           <img
             src="./images/feynman.png"
-            alt="Ilustração 'Dentro da biblioteca'"
+            alt="Feyman'"
             class="feynman__content_image"
           />
           <div class="feynman__content">
@@ -340,24 +340,28 @@
               <img
                 class="resources__image"
                 src="./images/resources-tedED.png"
+                alt="tedED"
               />
             </a>
             <a href="https://www.exemplo.com/1">
               <img
                 class="resources__image"
                 src="./images/resources-Medium.png"
+                alt="Medium"
               />
             </a>
             <a href="https://www.exemplo.com/1">
               <img
                 class="resources__image"
                 src="./images/resources-dezeen.png"
+                alt="dezeen"
               />
             </a>
             <a href="https://www.exemplo.com/1">
               <img
                 class="resources__image"
                 src="./images/resources-goodreads.png"
+                alt="goodreads"
               />
             </a>
           </div>
@@ -366,7 +370,11 @@
       <footer class="footer">
         <hr class="footer__linha-acima" />
         <div class="footer__content">
-          <img class="footer__logo" src="./images/tripleten.png" />
+          <img
+            class="footer__logo"
+            src="./images/tripleten.png"
+            alt="Tripleten fundo branco"
+          />
           <div class="footer__sobre">
             <h2 class="footer__sobre_titulo">Sobre o Practicum da Yandex</h2>
             <ul class="footer__sobre_list">
