--- a/index.html
+++ b/index.html
@@ -29,18 +29,22 @@
     <div class="page">
       <header class="header">
         <nav class="nav">
-          <img
-            class="nav__logo"
-            src="./images/tripleten_preto.png"
-            alt="Tripleten fundo preto"
-          />
+          <a href="https://tripleten.com.br/" target="_blank">
+            <img
+              class="nav__logo"
+              src="./images/tripleten_preto.png"
+              alt="Tripleten fundo preto"
+            />
+          </a>
         </nav>
         <h1 class="header__title">Aprendendo a<br />Aprender</h1>
         <p class="header__description">
           As técnicas de aprendizado mais eficazes que você pode aplicar ao seu
           cotidiano.
           <br />
-          <span class="header__description_seletor">Saiba mais</span>
+          <a href="https://example.com" target="_blank">
+            <span class="header__description_seletor">Saiba mais</span>
+          </a>
         </p>
         <img
           src="./images/on_the_edge.png"
@@ -190,7 +194,9 @@
           <div class="feynman__content">
             <h1 class="feynman__title">A Técnica de Feynman</h1>
             <h2 class="feynman__content_title">Aprender sem esquecer</h2>
-            <p class="feynman__content_seletor">Mais</p>
+            <a href="https://example.com" target="_blank">
+              <p class="feynman__content_seletor">Mais</p>
+            </a>
           </div>
         </section>
         <section class="digits">
@@ -266,7 +272,9 @@
             </div>
             <div class="khan__book-container">
               <img class="book-pic" src="./images/khan-book-2.png" />
-              <span class="book-link">Comprar</span>
+              <a href="https://example.com" target="_blank">
+                <span class="book-link">Comprar</span>
+              </a>
             </div>
           </div>
         </section>
@@ -336,28 +344,28 @@
             </h1>
           </div>
           <div class="resources__logo-zone">
-            <a href="https://www.exemplo.com/1">
+            <a href="https://ed.ted.com/" target="_blank">
               <img
                 class="resources__image"
                 src="./images/resources-tedED.png"
                 alt="tedED"
               />
             </a>
-            <a href="https://www.exemplo.com/1">
+            <a href="https://ed.ted.com/" target="_blank">
               <img
                 class="resources__image"
                 src="./images/resources-Medium.png"
                 alt="Medium"
               />
             </a>
-            <a href="https://www.exemplo.com/1">
+            <a href="https://www.dezeen.com/" target="_blank">
               <img
                 class="resources__image"
                 src="./images/resources-dezeen.png"
                 alt="dezeen"
               />
             </a>
-            <a href="https://www.exemplo.com/1">
+            <a href="https://www.goodreads.com/" target="_blank">
               <img
                 class="resources__image"
                 src="./images/resources-goodreads.png"
